Fixed text overflow on the Frontpage

--- a/src/main/resources/static/css/frontpage.css
+++ b/src/main/resources/static/css/frontpage.css
@@ -3,7 +3,7 @@
     border-radius: 50%;
     width: 72px;
     height: 72px;
-    margin-right: 5px;
+    margin: 5px;
 }
 
 .medal-outer {
@@ -58,7 +58,7 @@
     padding: 5px 30px 5px 10px;
     border-radius: 5%;
     width: 280px;
-    height: 82px;
+    height: 100%;
     overflow: hidden;
 }
 
